KFSPTS-25319 get code to compile